--- a/TubeCat/Base.lproj/Main.storyboard
+++ b/TubeCat/Base.lproj/Main.storyboard
@@ -474,6 +474,146 @@
             </objects>
             <point key="canvasLocation" x="797" y="1241"/>
         </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="orq-MV-T3M">
+            <objects>
+                <viewController id="w40-Hd-s1x" customClass="ProfileViewController" customModule="TubeCat" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="lqL-bi-Pu8"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ki0-2f-vnH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Y4I-7q-zE6">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="hXe-bv-j1A">
+                                <rect key="frame" x="108" y="100" width="384" height="400"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="eHs-Zb-Gjq">
+                                        <rect key="frame" x="0.0" y="0.0" width="384" height="128"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S0F-98-l6X">
+                                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="128" id="Yje-wy-hKu"/>
+                                                </constraints>
+                                                <variation key="default">
+                                                    <mask key="constraints">
+                                                        <exclude reference="Yje-wy-hKu"/>
+                                                    </mask>
+                                                </variation>
+                                            </imageView>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ObA-mu-U7S">
+                                                <rect key="frame" x="128" y="0.0" width="128" height="128"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="128" id="gM2-ZN-BWl"/>
+                                                </constraints>
+                                            </imageView>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DmO-3h-RTD">
+                                                <rect key="frame" x="256" y="0.0" width="128" height="128"/>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NPz-nT-CwV">
+                                        <rect key="frame" x="0.0" y="128" width="384" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="rlq-tR-CZb"/>
+                                            <constraint firstAttribute="height" constant="22" id="wer-ZZ-Cte"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="wer-ZZ-Cte"/>
+                                            </mask>
+                                        </variation>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="S6P-vf-rcS">
+                                        <rect key="frame" x="0.0" y="158" width="384" height="42"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uUQ-Ae-W5T">
+                                                <rect key="frame" x="0.0" y="0.0" width="192" height="42"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fv7-XP-DI2">
+                                                <rect key="frame" x="192" y="0.0" width="192" height="42"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="42" id="Oa3-Up-J6s"/>
+                                        </constraints>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x0H-V0-4My">
+                                        <rect key="frame" x="0.0" y="200" width="384" height="150"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="150" id="Ocg-PW-juu"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vth-dP-Fkr">
+                                        <rect key="frame" x="0.0" y="350" width="384" height="50"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                        <state key="normal" title="Log Out">
+                                            <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="logoutButtonPressed:" destination="w40-Hd-s1x" eventType="touchUpInside" id="BRE-9W-jNX"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="vth-dP-Fkr" firstAttribute="top" secondItem="S6P-vf-rcS" secondAttribute="bottom" constant="17" id="INd-kW-qn7"/>
+                                    <constraint firstItem="NPz-nT-CwV" firstAttribute="top" secondItem="hXe-bv-j1A" secondAttribute="top" constant="128" id="K6M-J9-SrI"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="INd-kW-qn7"/>
+                                    </mask>
+                                </variation>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hXe-bv-j1A" firstAttribute="centerY" secondItem="Y4I-7q-zE6" secondAttribute="centerY" id="5p5-W9-71U"/>
+                            <constraint firstItem="hXe-bv-j1A" firstAttribute="leading" secondItem="Y4I-7q-zE6" secondAttribute="leadingMargin" constant="30" id="BFE-i7-rzK"/>
+                            <constraint firstItem="hXe-bv-j1A" firstAttribute="centerX" secondItem="Y4I-7q-zE6" secondAttribute="centerX" id="NmQ-LA-zcP"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hXe-bv-j1A" secondAttribute="trailing" constant="50" id="bbJ-mj-K2C"/>
+                            <constraint firstItem="hXe-bv-j1A" firstAttribute="leading" secondItem="Y4I-7q-zE6" secondAttribute="leadingMargin" constant="80" id="lOx-eL-S3Q"/>
+                            <constraint firstItem="hXe-bv-j1A" firstAttribute="top" secondItem="lqL-bi-Pu8" secondAttribute="bottom" constant="36" id="si7-xj-BSo"/>
+                            <constraint firstItem="hXe-bv-j1A" firstAttribute="centerX" secondItem="Y4I-7q-zE6" secondAttribute="centerX" id="yfv-54-bF4"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="BFE-i7-rzK"/>
+                                <exclude reference="bbJ-mj-K2C"/>
+                                <exclude reference="lOx-eL-S3Q"/>
+                                <exclude reference="yfv-54-bF4"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" id="vHK-lL-HSj"/>
+                    <connections>
+                        <outlet property="logoutButton" destination="vth-dP-Fkr" id="lx0-Gn-yU8"/>
+                        <outlet property="nameLabel" destination="NPz-nT-CwV" id="yUe-as-Gn9"/>
+                        <outlet property="profileImageView" destination="ObA-mu-U7S" id="BZ3-5K-GOt"/>
+                        <outlet property="subscribersLabel" destination="uUQ-Ae-W5T" id="PqH-Ol-ssY"/>
+                        <outlet property="subscriptionsLabel" destination="fv7-XP-DI2" id="AP3-Ok-lhP"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZCD-i4-lAu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="797" y="1937"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="cET-oc-ff4">
             <objects>
@@ -487,6 +627,7 @@
                         <segue destination="kAj-Tx-W89" kind="relationship" relationship="viewControllers" id="m96-wK-iyl"/>
                         <segue destination="2eT-ma-1TK" kind="relationship" relationship="viewControllers" id="cg9-eU-gtd"/>
                         <segue destination="u8y-8J-TE3" kind="relationship" relationship="viewControllers" id="dpB-GH-gZh"/>
+                        <segue destination="i8K-x4-RQy" kind="relationship" relationship="viewControllers" id="zTJ-Em-uXa"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Aah-aH-krL" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -578,6 +719,25 @@
             </objects>
             <point key="canvasLocation" x="-15" y="-213"/>
         </scene>
+        <!--Account-->
+        <scene sceneID="3Jw-ya-tuY">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="i8K-x4-RQy" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Account" image="settingsIcon" id="7F9-QC-K2F"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9wO-C1-JC0">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="w40-Hd-s1x" kind="relationship" relationship="rootViewController" id="hfg-Da-0fp"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Aa2-Eb-xTR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-15" y="1937"/>
+        </scene>
     </scenes>
     <resources>
         <image name="boxIcon" width="42" height="42"/>
@@ -585,5 +745,6 @@
         <image name="heartIcon" width="71" height="80"/>
         <image name="heartItemIcon" width="71" height="61"/>
         <image name="searchIcon" width="36" height="36"/>
+        <image name="settingsIcon" width="42" height="42"/>
     </resources>
 </document>
